--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@types/he": "^1.1.0",
+    "@types/socket.io": "^1.4.36",
+    "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "he": "^1.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
