--- a/src/private/package.json
+++ b/src/private/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.22.2",
+    "request": "^2.87.0",
     "socket.io": "^2.1.1"
   }
 }
